crates/nash-parse/src/snapshots/nash_parse__type___tests__error_record_extension.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\n{ r | x : int }"
info: diagnostic
---
nash::syntax

  × Expected `:` after the field name.
   ╭─[src/Main.nash:1:5]
 1 │ { r | x : int }
   ·     ─
   ╰────
  help: Separate the field name and its type with `:`.
