crates/nash-parse/src/snapshots/nash_parse__type___tests__error_upper_type_variable.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\n'A"
info: diagnostic
---
nash::syntax

  × Expected a type in the annotation for `value`.
   ╭─[src/Main.nash:1:1]
 1 │ 'A
   · ─
   ╰────
  help: Write a type name or a quoted type variable, such as `'a`.
