crates/nash-parse/src/snapshots/nash_parse__type___tests__function_simple.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\n'a -> 'b"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 9,
        },
    },
    value: Lambda {
        from: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 3,
                },
            },
            value: Var(
                "a",
            ),
        },
        to: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 9,
                },
            },
            value: Var(
                "b",
            ),
        },
    },
}
