crates/nash-parse/src/snapshots/nash_parse__type___tests__function_with_app.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\nMaybe 'a -> Outcome 'e 'a"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 26,
        },
    },
    value: Lambda {
        from: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 9,
                },
            },
            value: Type {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 1,
                    },
                    end: Position {
                        line: 1,
                        column: 6,
                    },
                },
                name: "Maybe",
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 7,
                            },
                            end: Position {
                                line: 1,
                                column: 9,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                ],
            },
        },
        to: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 13,
                },
                end: Position {
                    line: 1,
                    column: 26,
                },
            },
            value: Type {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 13,
                    },
                    end: Position {
                        line: 1,
                        column: 20,
                    },
                },
                name: "Outcome",
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 21,
                            },
                            end: Position {
                                line: 1,
                                column: 23,
                            },
                        },
                        value: Var(
                            "e",
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 24,
                            },
                            end: Position {
                                line: 1,
                                column: 26,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                ],
            },
        },
    },
}
