crates/nash-parse/src/snapshots/nash_parse__type___tests__inline_kind_bound_in_nested_type.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\nlist (pair ('a : Big) ('b : Storable))"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 39,
        },
    },
    value: Type {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 5,
            },
        },
        name: "list",
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 38,
                    },
                },
                value: Type {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 7,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                    name: "pair",
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 12,
                                },
                                end: Position {
                                    line: 1,
                                    column: 22,
                                },
                            },
                            value: Repr {
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 13,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 15,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                                repr: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 18,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 21,
                                        },
                                    },
                                    value: Big,
                                },
                            },
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 23,
                                },
                                end: Position {
                                    line: 1,
                                    column: 38,
                                },
                            },
                            value: Repr {
                                typ: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 24,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 26,
                                        },
                                    },
                                    value: Var(
                                        "b",
                                    ),
                                },
                                repr: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 29,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 37,
                                        },
                                    },
                                    value: Storable,
                                },
                            },
                        },
                    ],
                },
            },
        ],
    },
}
