crates/nash-parse/src/snapshots/nash_parse__type___tests__inline_kind_bound_reports_invalid_kind.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\nlist ('a : Wrong)"
---
Tuple(
    Kind(
        Name(
            "Wrong",
            1,
            12,
        ),
        1,
        12,
    ),
    1,
    6,
)
