crates/nash-parse/src/snapshots/nash_parse__type___tests__inline_representation_annotation_reports_unknown_name.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\nlist ('a : Wrong)"
info: diagnostic
---
nash::syntax

  × Unknown representation bound `Wrong`.
   ╭─[src/Main.nash:1:12]
 1 │ list ('a : Wrong)
   ·            ─
   ╰────
  help: Use `Big`, `Const`, `Term`, `Storable`, or `Little`.
