crates/nash-parse/src/snapshots/nash_parse__type___tests__little_representation_bound.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\n('a : Little)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: Repr {
        typ: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
            value: Var(
                "a",
            ),
        },
        repr: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 13,
                },
            },
            value: Little,
        },
    },
}
