crates/nash-parse/src/snapshots/nash_parse__type___tests__little_type.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\na"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 2,
        },
    },
    value: Type {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 2,
            },
        },
        name: "a",
        args: [],
    },
}
